--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,11 +5,11 @@ import { siteConfig } from '../config.ts';
 <section
   class="mono-mesh to-mono-lighter relative bg-gradient-to-b from-white px-4 pt-32 pb-20 sm:px-6 lg:px-8"
 >
-  <div class="bg-mono-black absolute top-32 left-0 h-32 w-1"></div>
-  <div class="bg-mono-black absolute top-32 right-0 h-32 w-1"></div>
+  <!-- <div class="bg-mono-black absolute top-32 left-0 h-32 w-1 mt-50"></div>
+  <div class="bg-mono-black absolute top-32 right-0 h-32 w-1 mt-50"></div> -->
 
-  <div class="mx-auto max-w-7xl">
-    <div class="mx-auto max-w-4xl text-center">
+  <div class="mx-auto max-w-7xl mt-50">
+    <div class="mx-auto max-w-10xl text-center">
       <h1
         class="text-mono-black scroll-fade-up mb-6 text-5xl leading-tight font-extrabold sm:text-6xl lg:text-7xl"
       >
@@ -41,7 +41,7 @@ import { siteConfig } from '../config.ts';
       <div
         class="border-mono-lighter mx-auto grid max-w-3xl grid-cols-3 gap-8 border-t pt-20"
       >
-        {
+        <!-- {
           siteConfig.hero.stats.map((stat, index) => (
             <div class={`float scroll-fade-up stagger-${index + 1}`}>
               <div class="text-mono-black mb-2 text-4xl font-bold">
@@ -52,7 +52,7 @@ import { siteConfig } from '../config.ts';
               </div>
             </div>
           ))
-        }
+        } -->
       </div>
     </div>
   </div>
