--- a/src/components/Portofolio.astro
+++ b/src/components/Portofolio.astro
@@ -1,8 +1,8 @@
 ---
 import { siteConfig } from '../config.ts';
 import { Icon } from 'astro-icon/components';
-import { featuresContent } from '../content/features';
 import { servicesContent } from '../content/services';
+import { portofoliosContent } from '../content/portofolios';
 
 const iconMap = {
   lightning: 'heroicons:bolt',
@@ -17,7 +17,7 @@ const iconMap = {
 };
 ---
 
-<section id="features" class="relative bg-white px-4 py-20 sm:px-6 lg:px-8">
+<section id="portofolios" class="relative bg-mono-lighter border-t-2 px-4 py-20 sm:px-6 lg:px-8">
   <div
     class="border-mono-lighter absolute top-8 left-8 h-16 w-16 border-t-2 border-l-2"
   >
@@ -30,26 +30,27 @@ const iconMap = {
   <div class="mx-auto max-w-7xl">
     <div class="scroll-fade-up mx-auto mb-16 max-w-3xl text-center">
       <h2 class="text-mono-black mb-4 text-4xl font-bold sm:text-5xl">
-        {siteConfig.features.title}
+        {siteConfig.portofolios.title}
       </h2>
-      <p class="text-mono-dark text-xl">
-        {siteConfig.features.subtitle}
-      </p>
     </div>
 
-    <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
+    <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-2">
       {
-        servicesContent.map((feature, index) => (
+        portofoliosContent.map((portofolio, index) => (
           <div
             class={`group ${index % 2 === 0 ? 'scroll-fade-left' : 'scroll-fade-right'} border-mono-lighter rounded-xl border p-8 stagger-${(index % 9) + 1}`}
           >
-            <div class="feature-icon bg-mono-black mb-6 flex h-14 w-14 items-center justify-center rounded-lg text-white">
-              <Icon name={iconMap[feature.icon]} class="h-7 w-7" />
+            <div class="feature-icon mb-6 flex h-auto w-full items-center justify-center rounded-lg text-white">
+              {/* <Icon name={iconMap[portofolio.image]} class="h-7 w-7" /> */}
+              <img
+                src={portofolio.image}
+                alt={portofolio.imageAlt}
+              />
             </div>
             <h3 class="text-mono-black mb-3 text-xl font-semibold">
-              {feature.title}
+              {portofolio.title}
             </h3>
-            <p class="text-mono-dark leading-relaxed">{feature.description}</p>
+            <p class="text-mono-dark leading-relaxed">{portofolio.description}</p>
           </div>
         ))
       }
