--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -63,7 +63,7 @@ const companyIconMap = {
       }
     </div>
 
-    <div class="scroll-fade-up">
+    <!-- <div class="scroll-fade-up">
       <div class="bg-mono-lighter rounded-2xl p-12">
         <p
           class="text-mono-gray mb-10 text-center text-sm tracking-wide uppercase"
@@ -150,6 +150,6 @@ const companyIconMap = {
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
