--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Pricing from '../components/Pricing.astro';
 import FAQ from '../components/FAQ.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
+import Portofolio from '../components/Portofolio.astro';
 ---
 
 <!doctype html>
@@ -50,7 +51,8 @@ import Footer from '../components/Footer.astro';
     <Navigation />
     <Hero />
     <Features />
-    <HowItWorks />
+    <Portofolio />
+    <!-- <HowItWorks /> -->
     <Testimonials />
     <Pricing />
     <FAQ />
